RESOLVED FIXED283859
BR styled clear is ignored while partially relayouting
https://bugs.webkit.org/show_bug.cgi?id=283859
Summary BR styled clear is ignored while partially relayouting
Ahmad Saleem
Reported 2024-11-30 15:37:49 PST
Hi Team, While looking through more Blink's test cases, I came across another failing one: Test Case: https://jsfiddle.net/mzo74vdg/ ^ Yellow in first is not matching with green on WebKit ToT while matches in Chrome Canary 134 and Firefox Nightly 135. Blink Commit: https://source.chromium.org/chromium/chromium/src/+/5906908567a34abc3079a962fa6cc5a53d5a8f58 ^ It is something from Legacy Layout engine, so I am not sure, it is 1-1 merge but might be something for Alan or Antti to fix. :-) Thanks!
Attachments
Test reduction (275 bytes, text/html)
2024-12-02 11:50 PST, alan
no flags
Patch (3.07 KB, patch)
2024-12-02 20:45 PST, alan
no flags
[fast-cq]Patch (4.38 KB, patch)
2024-12-03 05:48 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2024-11-30 15:38:29 PST
alan
Comment 2 2024-12-02 11:50:13 PST
Created attachment 473430 [details] Test reduction
alan
Comment 3 2024-12-02 20:45:36 PST
alan
Comment 4 2024-12-03 05:48:30 PST
Created attachment 473439 [details] [fast-cq]Patch
EWS
Comment 5 2024-12-03 10:50:07 PST
Committed 287290@main (52a95a9a9640): <https://commits.webkit.org/287290@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473439 [details].
Note You need to log in before you can comment on or make changes to this bug.