BR styled clear is ignored while partially relayouting https://bugs.webkit.org/show_bug.cgi?id=283859# <rdar://problem/140734847>

Reviewed by Antti Koivisto.

We end up producing 2 'last' lines which confuses the 'clear' gap computation.

e.g. some content<br><span></span>

The first (and correct) 'last' line is "some content<br>" while we also mark the
trailing (and completely collapsed) "<span></span>" content as last line (even though this content does not generate any display content).

* LayoutTests/fast/block/float/clear-followed-by-empty-content-expected.html: Added.
* LayoutTests/fast/block/float/clear-followed-by-empty-content.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::isLastLineWithInlineContent const):

Canonical link: https://commits.webkit.org/287290@main